# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

wukong_root = "//test/wukong"
aafwk_root = "//foundation/aafwk/standard"

config("wukong_common_config") {
  include_dirs = [ "//third_party/json/single_include/nlohmann" ]
  cflags = [ "-D__OHOS__" ]
}

accessibility_include_dirs = [
  "//base/accessibility/frameworks/aafwk/include",
  "//foundation/appexecfwk/standard/common/log/include",
  "//foundation/multimodalinput/input/interfaces/native/innerkits/common/include",
  "//foundation/multimodalinput/input/interfaces/native/innerkits/event/include",
  "//foundation/multimodalinput/input/interfaces/native/innerkits/proxy/include",
  "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent_manager/include",
  "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent/include",
  "//base/hiviewdfx/hisysevent/adapter/native/idl/include",
  "//utils/native/base/include",
  "//utils/system/safwk/native/include",
  "//third_party/json/include",
  "//base//accessibility/interfaces/innerkits/aafwk/include",
  "include",
]

ohos_executable("wukong") {
  configs = [ ":wukong_common_config" ]
  sources = [
    "${aafwk_root}/tools/aa/src/shell_command.cpp",
    "${wukong_root}/src/wukong_app_manager.cpp",
    "${wukong_root}/src/wukong_command.cpp",
    "${wukong_root}/src/wukong_event_manager.cpp",
    "${wukong_root}/src/wukong_exception_manager.cpp",
    "${wukong_root}/src/wukong_main.cpp",
    "${wukong_root}/src/wukong_sysevent_listener.cpp",
  ]

  include_dirs = [ "${wukong_root}/include" ]

  include_dirs += accessibility_include_dirs

  deps = [ "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent_manager:libhisyseventmanager" ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "accessibility:accessibleability",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "common_event_service:cesfwk_core",
    "common_event_service:cesfwk_innerkits",
    "hisysevent_native:libhisysevent",
    "hiviewdfx_hilog_native:libhilog",
    "input:libmmi-client",
    "ipc:ipc_core",
    "multimedia_image_standard:image_native",
    "samgr_standard:samgr_proxy",
    "window_manager:libdm",
    "window_manager:libwm",
  ]
  install_enable = true

  subsystem_name = "test"
  part_name = "wukong"
  output_name = "wukong"
  defines = [ "LOG_TAG=\"WuKong\"" ]
}
